--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -1033,7 +1033,7 @@
     }
    ],
    "source": [
-    "#Seems that cubic interp1d depends way too much on given sample because of backers and usd_pledged_real\n",
+    "#Seems that cubic interp1d depends way too much on given sample\n",
     "plt.figure(figsize=(15,8))\n",
     "plt.plot(kickstarter.backers,kickstarter.usd_pledged_real,'o')\n",
     "plt.xlabel('Backers',size=15)\n",
